--- a/MVC_HW/Views/SalesOrders/Index.cshtml
+++ b/MVC_HW/Views/SalesOrders/Index.cshtml
@@ -102,6 +102,7 @@
 
 
                 })
+                console.log( $("#tabletest").data().kendoGrid);
             },
             error: function (xhr, ajaxOptions, thrownError) {
                 alert(xhr.status);
